# UofA-vision

./: .gitignore  README.md  coordinates_calibration.txt  main.py  pyproject.toml  requirements.txt  tracking_detectors.py
